--- a/dockerfiles/nginx/nginx.conf
+++ b/dockerfiles/nginx/nginx.conf
@@ -92,8 +92,8 @@ http {
     }
 
     server {
-        listen       80 default_server;
-        server_name  n9e.example.com;
+        listen       8888 default_server;
+        server_name  n9e.richie.com;
         root         /home/n9e/pub;
 
         # Load configuration files for the default server block.
